--- a/src/main/webapp/swagger-ui-zh/index.html
+++ b/src/main/webapp/swagger-ui-zh/index.html
@@ -32,7 +32,7 @@
 		if(url && url.length > 1){
 			url = decodeURIComponent(url[1]);
 		}else{
-			url = "http://47.93.25.129:8080/viewol_web/swagger.json";
+			url = "http://47.93.25.129:8888/inviteWeb/swagger.json";
 		}
 		window.swaggerUi = new SwaggerUi({
 			url: url,
